change be curious
to about us

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Be Curious</h2>
+                    <h2 class="section-heading">About Us</h2>
                         <hr class="light">
                             <p class="text-faded"> Puentes Project is a platform that highlights individuals and initiatives that are strengthening US-Mexico friendships. Our mission is to tell the stories of goodwill between the people from both nations. 
                             </p>
