--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -7,31 +7,55 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contribute!</h2>
                     <hr class="light">
-                        <p class="text-faded"> Annotate your own images and create a page using our platform. Check out the <a href="https://github.com/Puentes-Project"> Github Organization </a> for code and instructions. 
+                        <p class="text-faded"> Join the community that supports Puentes Project Podcast.
                         </p>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-4 text-center">
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                     <div class="service-box">
-                        <a href:"https://github.com/Annotated-Ultras/Template_Site.git">
-                            <i class="fa fa-4x fa-code-fork wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
-                            <h3>Fork the template</h3>
+                        <a target = "_blank" href="https://www.facebook.com/PuentesProject">
+                            <i class="fa fa-4x fa-facebook-square wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
+                            <h3>Facebook</h3>
                         </a>
                     </div>
              </div>
-            <div class="col-lg-4 col-md-4 text-center">
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <a href="">
-                    	<i class="fa fa-4x fa-book wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
-                    	<h3>Instructions</h3>
+                    <a target = "_blank" href="https://twitter.com/PuentesProject">
+                    	<i class="fa fa-4x fa-twitter-square wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
+                    	<h3>Twitter</h3>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 text-center">
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <a href="mailto:Annotated.Ultras@gmail.com?subject=Request to Join Organzation">
+                    <a href="mailto:PuentesProjectPodcast@gmail.com?subject=Request to Join Organzation">
+                        <i class="fa fa-4x fa-github-square wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
+                        <h3>Github</h3>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                <div class="service-box">
+                    <a href="mailto:PuentesProjectPodcast@gmail.com?subject=I have a great idea">
                         <i class="fa fa-4x fa-child wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
-                        <h3>Join the Organization</h3>
+                        <h3>Submit a Story</h3>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                <div class="service-box">
+                    <a target = "_blank" href="https://soundcloud.com/user-498165897">
+                        <i class="fa fa-4x fa-soundcloud wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
+                        <h3>SoundCloud</h3>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                <div class="service-box">
+                    <a target = "_blank" href="pay.pal">
+                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
+                        <h3>Donate</h3>
                     </a>
                 </div>
             </div>
