--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -41,8 +41,7 @@
             <div class="header-content-inner">
                 <h1>Puentes Project Podcast</h1>
                 <hr>
-                <h3> SOME SORT OF SUBTITLE  </h3>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Stories that unite</a>
             </div>
         </div>
     </header>
