--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -40,7 +40,7 @@
         <div class="header-content">
             <div class="header-content-inner">
                 <h1>Puentes Project Podcast</h1>
-                <hr>
+                <hr class="light">
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Stories that unite</a>
             </div>
         </div>
