--- a/css/creative.css
+++ b/css/creative.css
@@ -186,7 +186,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: "./img/Vagamundos.png";
+    background-image: url(../img/Vagamundos.png);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
