--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -5,16 +5,16 @@
 	<div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Contribute!</h2>
+                <h2 class="section-heading">Contribuye!</h2>
                     <hr class="light">
-                        <p class="text-faded"> Join the community that supports Puentes Project Podcast.
+                        <p class="text-faded"> Unete al comunitario Vagamundos
                         </p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                     <div class="service-box">
-                        <a target = "_blank" href="https://www.facebook.com/PuentesProject">
+                        <a target = "_blank" href="https://www.facebook.com/VagamundosPodcast">
                             <i class="fa fa-4x fa-facebook-square wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
                             <h3>Facebook</h3>
                         </a>
@@ -22,14 +22,14 @@
              </div>
             <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <a target = "_blank" href="https://twitter.com/PuentesProject">
+                    <a target = "_blank" href="https://twitter.com/SomosVagamundos">
                     	<i class="fa fa-4x fa-twitter-square wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
                     	<h3>Twitter</h3>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <a href="mailto:PuentesProjectPodcast@gmail.com?subject=Request to Join Organzation">
+                    <a href="mailto:VagamundosPodcast@gmail.com?subject=Request to Join Organzation">
                         <i class="fa fa-4x fa-github-square wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
                         <h3>Github</h3>
                     </a>
@@ -37,7 +37,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <a href="mailto:PuentesProjectPodcast@gmail.com?subject=I have a great idea">
+                    <a href="mailto:VagamundosPodcast@gmail.com?subject=I have a great idea">
                         <i class="fa fa-4x fa-child wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
                         <h3>Submit a Story</h3>
                     </a>
