--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,26 +8,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="{{ site.github.url }}/#page-Top">Puentes Project Podcast</a>
+                <a class="navbar-brand page-scroll" href="{{ site.github.url }}/#page-Top">Vagamundos Podcast</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="{{ site.github.url }}/#about">About</a>
+                        <a class="page-scroll" href="{{ site.github.url }}/#about">Sobre</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="{{ site.github.url }}/#portfolio">Podcasts</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ site.github.url }}/#contribute">Contribute</a>
+                        <a class="page-scroll" href="{{ site.github.url }}/#contribute">Contribuir</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ site.github.url }}/#contact">Contact</a>
+                        <a class="page-scroll" href="{{ site.github.url }}/#contact">Contacto</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ site.github.url }}/#blog">Blog Posts</a>
+                        <a class="page-scroll" href="{{ site.github.url }}/#blog">Blog</a>
                     </li>
                 </ul>
             </div>
