--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -8,23 +8,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="{{ site.github.url }}/#page-Top">Puentes Project Podcast</a>
+                <a class="navbar-brand page-scroll" href="{{ site.github.url }}/#page-Top">Vagamundos Podcast</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Sobre</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Podcasts</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contribute">Contribute</a>
+                        <a class="page-scroll" href="#contribute">Contribuir</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contacto</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="{{ site.github.url }}/#blog">Blog</a>
