--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -48,9 +48,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">About Us</h2>
+                    <h2 class="section-heading">Sobre nosotros</h2>
                         <hr class="light">
-                            <p class="text-faded"> Puentes Project is a platform that highlights individuals and initiatives that are strengthening US-Mexico friendships. Our mission is to tell the stories of goodwill between the people from both nations. 
+                            <p class="text-faded">Vagamundos Podcast se trata de viajeros, viajes, aventuras y el curiosos espirito  incansable del ser humano. Los episodes se presentan ejemplares de la diversidad de viajes y viajeros. Incluso las historias de mochileros, oficinistas, periodistas, cientificos, y religiosos. 
                             </p>
                 </div>
             </div>
