--- a/_includes/form.html
+++ b/_includes/form.html
@@ -5,7 +5,7 @@
         <h2 class="section-heading">Contact</h2>
         <hr class="light">
         <i class="fa fa-4x fa-envelope wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
-        <h3><a href="mailto:PuentesProjectPodcast@gmail.com">PuentesProjectPodcast@gmail.com</a></h3>
+        <h3><a href="mailto:VagamundosPodcast@gmail.com">VagamundosPodcast@gmail.com</a></h3>
       </div>
     </div>
   </div>
