Updated contribute section
Updated contribute section and nav bar elements

--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -5,9 +5,9 @@
 	<div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Contribuye!</h2>
+                <h2 class="section-heading">Conéctate</h2>
                     <hr class="light">
-                        <p class="text-faded"> Unete al comunitario Vagamundos
+                        <p class="text-faded"> Únete a nuestra caravana en redes sociales
                         </p>
             </div>
         </div>
@@ -29,22 +29,6 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                 <div class="service-box">
-                    <a href="mailto:VagamundosPodcast@gmail.com?subject=Request to Join Organzation">
-                        <i class="fa fa-4x fa-github-square wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
-                        <h3>Github</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
-                <div class="service-box">
-                    <a href="mailto:VagamundosPodcast@gmail.com?subject=I have a great idea">
-                        <i class="fa fa-4x fa-child wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
-                        <h3>Submit a Story</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
-                <div class="service-box">
                     <a target = "_blank" href="https://soundcloud.com/user-498165897">
                         <i class="fa fa-4x fa-soundcloud wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
                         <h3>SoundCloud</h3>
@@ -55,7 +39,7 @@
                 <div class="service-box">
                     <a target = "_blank" href="pay.pal">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
-                        <h3>Donate</h3>
+                        <h3>Donar</h3>
                     </a>
                 </div>
             </div>
