--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -21,6 +21,9 @@
                         <a class="page-scroll" href="#portfolio">Podcasts</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#Compartir">Compartir</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contribute">Contribuir</a>
                     </li>
                     <li>
@@ -51,6 +54,18 @@
                     <h2 class="section-heading">Sobre nosotros</h2>
                         <hr class="light">
                             <p class="text-faded">Vagamundos Podcast se trata de viajeros, viajes, aventuras y el curiosos espirito  incansable del ser humano. Los episodes se presentan ejemplares de la diversidad de viajes y viajeros. Incluso las historias de mochileros, oficinistas, periodistas, cientificos, y religiosos. 
+                            </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-primary" id="Compartir">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Compartenos tu historia</h2>
+                        <hr class="light">
+                            <p class="text-faded">Si conoces a algún viajero/a que tenga una historia interesante que compartir, o si tu eres un vagamundo que quiere ser entrevistado, mandanos un correo y nos pondremos en contacto contigo.
                             </p>
                 </div>
             </div>
