--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,9 @@
                         <a class="page-scroll" href="{{ site.github.url }}/#portfolio">Podcasts</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="{{ site.github.url }}/#Compartir">Compartir</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="{{ site.github.url }}/#contribute">Contribuir</a>
                     </li>
                     <li>
