--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,4 +1,4 @@
-<section id = "portfolio">
+<section id = "portfolio" class="bg-primary" >
 	<div class="container-fluid">
 		<div class = "row">
 			<div class = "col-md-4 col-sm-4">
