--- a/_layouts/post_default.html
+++ b/_layouts/post_default.html
@@ -77,7 +77,7 @@ excerpt_separator: <!--more-->
     <meta name="description" content="Blog post for Puentes Project Podcast">
     <meta name="author" content="Collin Schwantes">
       
-    <title>Puentes Project Podcast</title>
+    <title>Vagamundos Podcast</title>
     
     <link rel='shortcut icon' href='favicon.png' />
     <link rel="icon" href="favicon.png" type="image/ico" />
