--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -53,7 +53,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Sobre nosotros</h2>
                         <hr class="light">
-                            <p class="text-faded">Vagamundos Podcast se trata de viajeros, viajes, aventuras y el curiosos espirito  incansable del ser humano. Los episodes se presentan ejemplares de la diversidad de viajes y viajeros. Incluso las historias de mochileros, oficinistas, periodistas, cientificos, y religiosos. 
+                            <p class="text-faded">Vagamundos Podcast es la radio para viajeros. Hacemos episodios en audio que retratan la diversidad de los amantes de los viajes. Contamos historias de todos colores, desde mochileros soñadores hasta oficinistas exprimiendo sus días de vacaciones para llegar a nuevos horizontes. Te invitamos a unirte a nuestra caravana viajera, continuando la conversación en redes sociales. 
                             </p>
                 </div>
             </div>
