--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -24,7 +24,7 @@
                         <a class="page-scroll" href="#portfolio">Podcasts</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contribute">Contribuir</a>
+                        <a class="page-scroll" href="#contribute">Conectar</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contacto</a>
@@ -54,18 +54,6 @@
                     <h2 class="section-heading">Sobre nosotros</h2>
                         <hr class="light">
                             <p class="text-faded">Vagamundos Podcast es la radio para viajeros. Hacemos episodios en audio que retratan la diversidad de los amantes de los viajes. Contamos historias de todos colores, desde mochileros soñadores hasta oficinistas exprimiendo sus días de vacaciones para llegar a nuevos horizontes. Te invitamos a unirte a nuestra caravana viajera, continuando la conversación en redes sociales. 
-                            </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="Compartir">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Compartenos tu historia</h2>
-                        <hr class="light">
-                            <p> Si conoces a algún viajero/a que tenga una historia interesante que compartir, o si tu eres un vagamundo que quiere ser entrevistado, mandanos un correo y nos pondremos en contacto contigo.
                             </p>
                 </div>
             </div>
