--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
                         <a class="page-scroll" href="{{ site.github.url }}/#portfolio">Podcasts</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ site.github.url }}/#contribute">Contribuir</a>
+                        <a class="page-scroll" href="{{ site.github.url }}/#contribute">Conectar</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="{{ site.github.url }}/#contact">Contacto</a>
