--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -1,22 +1,22 @@
-<section class = "bg-primary" id="Compartir">
+<section id="Compartir">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Compartenos tu historia</h2>
                     <hr class="light">
-                        <p class="text-faded"> Si conoces a algún viajero/a que tenga una historia interesante que compartir, o si tu eres un vagamundo que quiere ser entrevistado, mandanos un correo y nos pondremos en contacto contigo.
+                        <p> Si conoces a algún viajero/a que tenga una historia interesante que compartir, o si tu eres un vagamundo que quiere ser entrevistado, mandanos un correo y nos pondremos en contacto contigo.
                         </p>
             </div>
         </div>
     </div>
 </section>
-<section class = "bg-primary" id="contribute">
+<section  id="contribute">
 	<div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Conéctate</h2>
                     <hr class="light">
-                        <p class="text-faded"> Únete a nuestra caravana en redes sociales
+                        <p> Únete a nuestra caravana en redes sociales
                         </p>
             </div>
         </div>
