updated formatting and image
changed class for contribute section and added images of standard size

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,7 +3,7 @@
 		<div class = "row">
 			<div class = "col-md-4 col-sm-4">
 				<a href="http://fake.pod.cast" class = "portfolio-box">
-					<img class= "img-responsive img-rounded" src="http://www.audubon.org/sites/default/files/Greater_Roadrunner_b13-45-102_l_1.jpg" alt="Podcast 1">
+					<img class= "img-responsive img-rounded" src="./img/EpisodeComing.png" alt="Podcast 1">
 					<div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -17,7 +17,7 @@
 			</div>
 			<div class = "col-md-4 col-sm-4">
 				<a href="http://fake.pod.cast2" class = "portfolio-box">
-					<img class= "img-responsive img-rounded" src="http://www.audubon.org/sites/default/files/Greater_Roadrunner_b13-45-102_l_1.jpg" alt="Podcast 2">
+					<img class= "img-responsive img-rounded" src="./img/EpisodeComing.png" alt="Podcast 2">
 					<div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -31,7 +31,7 @@
 			</div>
 			<div class = "col-md-4 col-sm-4">
 				<a href="http://fake.pod.cast3" class = "portfolio-box">
-					<img class= "img-responsive img-rounded" src="http://www.audubon.org/sites/default/files/Greater_Roadrunner_b13-45-102_l_1.jpg" alt="Podcast 3">
+					<img class= "img-responsive img-rounded" src="./img/EpisodeComing.png" alt="Podcast 3">
 					<div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
